fix/development: update bycryptjs
